@@ -43,7 +43,7 @@ supporting internal functions that are not used by other modules. */
 
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #define NLBLOCK cd             /* Block containing newline information */
