@@ -44,7 +44,7 @@ for these functions came from Scott Wimer. */
 
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #include "pcre_internal.h"
