@@ -46,7 +46,7 @@ compilation of dftables.c, in which case the macro DFTABLES is defined. */
 
 #ifndef DFTABLES
 #  ifdef HAVE_CONFIG_H
-#  include <config.h>
+#  include "config.h"
 #  endif
 #  include "pcre_internal.h"
 #endif
