@@ -44,7 +44,7 @@ pcre_exec() and pcre_def_exec(). */
 
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #include "pcre_internal.h"
