@@ -34,7 +34,7 @@
 // TODO: Test extractions for PartialMatch/Consume
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #ifdef _WIN32
